# LR6

Task_1_2_3/: CMakeLists.txt  Task_1.cpp  Task_1.h  Task_1_2_3.cpp  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h  Tasks.h  main.cpp
Task_1_2_3/.Testing/: CMakeLists.txt  Task_1_TESTS  Task_1_TESTS.cpp  Task_2_TESTS  Task_2_TESTS.cpp  Task_3_TESTS  Task_3_TESTS.cpp
Task_1_2_3/.flowcharts/: flowchart_for_Task_1.odg  flowchart_for_Task_2.odg  flowchart_for_Task_3.odg
